--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "https://www.amazon.com/*"
   ],
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "index.html",
     "default_title": "BookScout"
   }
 }
